[fix bug 1864075] Missing borders. Big changes for incremental checkin for Column width stability: Using COLGROUP and COL els to manage minWidths; refactored _setColumnWidths into _setColumnWidthsDynStyles and _setColumnWidthsDynFunction; better TR templating; new browser repaint functions; hide Columns via CSS; render() is tempoarily broken.

--- a/widget/datatable/src/css/datatable-core.css
+++ b/widget/datatable/src/css/datatable-core.css
@@ -1,4 +1,6 @@
 /* foundational CSS */
+
+/*TODO remove */
 .yui-dt {
     border-bottom:1px solid transparent;
 }
@@ -7,7 +9,15 @@
     border-bottom:none;
 }
 
-/* a11y headers */
+/* scrollable */
+.yui-dt-scrollable .yui-dt-bd {
+    overflow:auto;
+}
+.yui-dt-scrollable .yui-dt-hd {
+    overflow:hidden;
+    position:relative; /* for ie overflow bug http://rowanw.com/bugs/overflow_relative.htm */
+} 
+
 .yui-dt-scrollable .yui-dt-bd thead tr,
 .yui-dt-scrollable .yui-dt-bd thead th {
     position:absolute;
@@ -49,22 +59,16 @@ th.yui-dt-resizeable .yui-dt-liner {
 }
 
 /* hidden columns */
-.yui-skin-sam th.yui-dt-hidden .yui-dt-liner, 
-.yui-skin-sam td.yui-dt-hidden .yui-dt-liner {
+th.yui-dt-hidden .yui-dt-liner, 
+td.yui-dt-hidden .yui-dt-liner {
+    /*TODO: document 2.5.1 change
     margin:0;
     padding:0;
-    overflow:hidden;
     white-space:nowrap;
+    width:1px;
+    overflow:hidden;*/
+    display:none;
 }
-
-/* vertical and horizontal scrolling */
-.yui-dt-scrollable .yui-dt-bd {
-    overflow:auto;
-}
-.yui-dt-scrollable .yui-dt-hd {
-    overflow:hidden;
-    position:relative; /* for ie overflow bug http://rowanw.com/bugs/overflow_relative.htm */
-} 
 
 /* editing */
 .yui-dt-editor {
